--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
         <li>Paris</li>
         <li>London</li>
         <li>Roma</li>
-        <li>Berlin</li>        
+        <li>Berlin</li>
+               
+    </ul>
+    <h1>Cars</h1>
+    <ul>
+        <li>Alfa</li>
+        <li>Romeo</li>
+        <li>BMW</li>
     </ul>
 </body>
 </html>
