--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         <li>Honda</li>
         <li>toyota</li>        
     </ul>
-</body>
+    <p> Burasını yeni olusturdum</p>
+    </body>
 </html>
